Clean generated SentencePieceModel